<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_top_radius_10"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_border_2_solid_orange"
        android:drawableStart="@drawable/baseline_title_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/orange"
        android:gravity="center|start"
        android:hint="@string/title"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_border_2_solid_orange"
        android:drawablePadding="10dp"
        android:gravity="center|start"
        android:hint="@string/start_time"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:drawableStartCompat="@drawable/baseline_access_time_24"
        app:drawableTint="@color/orange" />

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_border_2_solid_orange"
        android:drawablePadding="10dp"
        android:gravity="center|start"
        android:hint="@string/end_time"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:drawableStartCompat="@drawable/baseline_access_time_24"
        app:drawableTint="@color/orange" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_border_2_solid_orange"
        android:gravity="start"
        android:hint="@string/description"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_border_2_solid_orange"
        android:backgroundTint="@color/orange"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>