<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/bg_white_radius_10"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_top_radius_10"
        android:backgroundTint="@color/orange"
        android:gravity="center"
        android:paddingVertical="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_pie_chart_24"
            app:tint="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/app_usage_stats_permission"
        android:textColor="@color/orange"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/permission_explain_read_package_usage_stats"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_radius_8"
            android:backgroundTint="@color/gray"
            android:elevation="3dp"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_get_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_radius_8"
            android:backgroundTint="@color/orange"
            android:elevation="3dp"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/get_permission"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>