<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".view.fragment.NotesSettingFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/archivo"
        android:text="@string/notes"
        android:textColor="@color/orange"
        android:textSize="30sp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_border_2_solid_orange"
        android:backgroundTint="@color/gray_slight"
        android:elevation="3dp"
        app:closeIcon="@drawable/baseline_cancel_24"
        app:iconifiedByDefault="false"
        app:queryHint="Search App..." />

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_view"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_border_2_solid_orange"
            android:backgroundTint="@color/orange"
            android:elevation="3dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            android:text="@string/all"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_time_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_border_2_solid_orange"
            android:backgroundTint="@color/orange"
            android:elevation="3dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            android:text="@string/time_filter"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_add_new"
        android:layout_below="@+id/filter_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_notes_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadingEdge="horizontal|vertical"
                android:fadingEdgeLength="20dp"
                android:orientation="vertical"
                android:requiresFadingEdge="horizontal|vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/note_item" />

            <include
                layout="@layout/nothing_layout"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/orange"
        android:src="@drawable/baseline_add_24"
        app:tint="@color/white" />

</RelativeLayout>