<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_top_radius_10"
    android:backgroundTint="@color/orange"
    android:layout_marginHorizontal="5dp"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/white"
        app:cardElevation="3dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_cancel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:src="@drawable/baseline_cancel_24"
            android:tint="@color/orange" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="3dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:src="@drawable/ad_block"
                android:tint="@color/orange" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_more_ads_title"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:text="@string/no_more_ads_description"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_radius_10"
            android:backgroundTint="@color/white"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="3dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/price_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/buy"
                    android:textColor="@color/orange"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/orange"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="$99.0" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/orange"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>